# weather-data-challenge

./: README.md  comity-coding-challenge-weather.md  write-up.md
new_structure/: README.md  data.db  inspect_grib.py  pyproject.toml
new_structure/data_points/: points.txt  points_01.txt
new_structure/src/hrrr_ingest/: cli.py  config.py  database.py  download.py  process.py  setup.py
src/: pyproject.toml
src/hrrr_ingest/: __init__.py  cli.py  config.py  data.db  database.py  download.py  process.py
src/hrrr_ingest/tests/: conftest.py  test_cli.py  test_coordinates.py  test_database.py  test_grib_processing.py
src/hrrr_ingest/tests/data/: pytest.ini  test_points.txt
src/hrrr_injest/: cli.py  database.py
