[project]
name = "hrrr-ingest"
version = "0.1.0"
description = "CLI tool for ingesting HRRR weather forecast data"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "duckdb>=0.9.0",
    "boto3>=1.26.0",
    "xarray>=2023.1.0",
    "cfgrib>=0.9.10.4",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hrrr_ingest"] 